Fixed Media Query
Added tablet sizing however, there is some sizing that still produced an overlap so I had to make up numbers to ensure that I didn't get an overlapping text issue.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -246,12 +246,12 @@ span a {
     
   
 
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 900px) {
     div.hero1 {
         font-size: 14px;
     }
   }
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 900px) {
    p.quote {
         font-size: 12px;
     }
